[workspace]
members = [
    "packages/*",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
incremental = false

[profile.test.package."*"]
debug = "none"
debug-assertions = false
strip = "debuginfo"
incremental = false

[profile.release]
debug = "full"
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
missing_docs = "warn"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
missing_abi = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "deny"

[workspace.lints.clippy]
unused_async = "deny"
large_futures = "warn"
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
unsafe_derive_deserialize = "allow"
missing_panics_doc = "allow"
cast_sign_loss = "allow"
missing_fields_in_debug = "allow"
unnecessary_wraps = "allow"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
chrono = { version = "0.4.42", features = ["serde"] }
indoc = { version = "2.0.7" }
meta = { path = "packages/meta" }
mimalloc = { version = "0.1.48", features = ["v3"] }
neon = { version = "1.1.1", features = ["napi-8", "serde", "tokio"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
reqwest = { version = "0.12.25", default-features = false, features = [
    "charset",
    "gzip",
    "http2",
    "json",
    "native-tls",
    "system-proxy",
] }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
tauri-winres = { version = "0.3.5" }
tempfile = { version = "3.23.0" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
with_dir = { version = "0.1.4" }

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.114", locked = true }
cargo-llvm-cov = { version = "0.6.21", locked = true }
