[workspace]
members = [
    "packages/*",
]
resolver = "3"

[workspace.package]
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
incremental = false

[profile.test.package."*"]
debug = "none"
debug-assertions = false
strip = "debuginfo"
incremental = false

[profile.release]
debug = "full"
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
missing_docs = "warn"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
missing_abi = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "deny"

[workspace.lints.clippy]
unused_async = "deny"
large_futures = "warn"
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
unsafe_derive_deserialize = "allow"
missing_panics_doc = "allow"
cast_sign_loss = "allow"
missing_fields_in_debug = "allow"
unnecessary_wraps = "allow"

[workspace.dependencies]
# Always update nightly version in `rust-toolchain` file when updating dependencies
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1.89" }
bytes = { version = "1.10.1" }
chrono = { version = "0.4.42", features = ["serde"] }
core = { path = "packages/core" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
indoc = { version = "2.0.7" }
meta = { path = "packages/meta" }
mimalloc = { version = "0.1.48", features = ["v3"] }
neon = { version = "1.1.1", features = ["napi-8", "serde", "tokio"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
reqwest = { version = "0.13.1", features = [
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "hickory-dns",
    "json",
    "multipart",
    "query",
    "socks",
    "stream",
    "zstd",
] }
reqwest-websocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
tauri-winres = { version = "0.3.5" }
tempfile = { version = "3.24.0" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17" }
tokio-test = { version = "0.4.4" }
tokio-util = { version = "0.7.17", features = ["join-map"] }
wiremock = { version = "0.6.4" }
with_dir = { version = "0.1.4" }

[workspace.metadata.bin]
# Check for updates manually, dependabot ignores this section
cargo-nextest = { version = "0.9.117", locked = true }
cargo-llvm-cov = { version = "0.6.22", locked = true }
cargo-deny = { version = "0.18.9" }
cargo-cache = { version = "0.8.3" }
samply = { version = "0.13.1" }
