[workspace]
members = ["packages/core", "packages/meta", "packages/node"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
incremental = false

[profile.test.package."*"]
debug = "none"
debug-assertions = false
strip = "debuginfo"
incremental = false

[profile.release]
debug = "full"
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
missing_docs = "deny"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "deny"
missing_abi = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
# Pedantic lint group (base)
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides
missing_errors_doc = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
unsafe_derive_deserialize = "allow"
missing_panics_doc = "allow"
cast_sign_loss = "allow"
missing_fields_in_debug = "allow"
unnecessary_wraps = "allow"

# Strict lints (beyond pedantic)
unused_async = "deny"
large_futures = "deny"
unwrap_used = "deny"

# Restriction lints (Go-like strictness - not in pedantic)
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "deny"
panic = "deny"
string_add = "deny"
clone_on_ref_ptr = "deny"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_assert_message = "deny"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
# Always update nightly version in `mise.toml` file when updating dependencies
anyhow = { version = "1.0.100" }
async-stream = { version = "0.3.6" }
async-trait = { version = "0.1.89" }
bytes = { version = "1.10.1" }
chrono = { version = "0.4.42", features = ["serde"] }
core = { path = "packages/core", version = "0.0.0" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
indoc = { version = "2.0.7" }
meta = { path = "packages/meta", version = "0.0.0" }
mimalloc = { version = "0.1.48", features = ["v3"] }
neon = { version = "1.1.1", features = ["napi-8", "serde", "tokio", "tokio-rt-multi-thread"] }
neon-build = { version = "0.10.1" }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
reqwest = { version = "0.13.1", features = [
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "hickory-dns",
    "json",
    "multipart",
    "query",
    "socks",
    "stream",
    "zstd",
] }
reqwest-websocket = { version = "0.6.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
tauri-winres = { version = "0.3.5" }
tempfile = { version = "3.24.0" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17" }
tokio-test = { version = "0.4.4" }
tokio-util = { version = "0.7.17", features = ["join-map"] }
wiremock = { version = "0.6.4" }
with_dir = { version = "0.1.4" }
