[project]
name = "workspace"
version = "0.0.0"
dependencies = []

[tool.uv]
required-version = ">=0.9.21"
exclude-newer = "1 day"

[tool.uv.workspace]
members = ["packages/node/tests/mitmproxy"]

[dependency-groups]
dev = [
    "mitmproxy==12.2.1 ; sys_platform != 'win32'",
    "pyrefly==0.50.1",
    "ruff==0.14.14",
    "semgrep==1.152.0; sys_platform != 'win32'",
    "zizmor==1.22.0 ; sys_platform != 'win32'",
]

[tool.pyrefly]
project-includes = ["packages/**/*.py"]
use-ignore-files = true

[tool.ruff]
cache-dir = ".cache/shared/ruff"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle - documentation style (too noisy for scripts)
    "COM812", # missing-trailing-comma (conflicts with formatter)
    "INP001", # implicit-namespace-package (single-file scripts)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "T20",    # flake8-print - allow print in scripts
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 4
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 10
