[project]
name = "workspace"
version = "0.0.0"
dependencies = []

[tool.uv]
required-version = ">=0.9.21"
exclude-newer = "1 day"

[tool.uv.workspace]
members = ["packages/node/tests/mitmproxy"]

# Force musllinux semgrep wheels on Linux.
[[tool.uv.sources.semgrep]]
url = "https://files.pythonhosted.org/packages/16/87/7bfa399b72d45b20712825d18948c9a40c5648b1d3ac0eaf280c02bf9a10/semgrep-1.159.0-cp310.cp311.cp312.cp313.cp314.py310.py311.py312.py313.py314-none-musllinux_1_2_x86_64.whl"
marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"

[[tool.uv.sources.semgrep]]
url = "https://files.pythonhosted.org/packages/b4/c9/9aeb8078ad7886d34766c96a69cc011d737cd383fe488ae9a79312dbc377/semgrep-1.159.0-cp310.cp311.cp312.cp313.cp314.py310.py311.py312.py313.py314-none-musllinux_1_2_aarch64.whl"
marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"

[dependency-groups]
dev = [
    "mitmproxy==12.2.2 ; sys_platform != 'win32'",
    "pyrefly==0.61.1",
    "ruff==0.15.11",
    "semgrep==1.159.0 ; sys_platform != 'win32'",
    "zizmor==1.24.1 ; sys_platform != 'win32'",
]

[tool.pyrefly]
project-includes = ["packages/**/*.py"]
use-ignore-files = true

[tool.ruff]
cache-dir = ".cache/shared/ruff"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle - documentation style (too noisy for scripts)
    "COM812", # missing-trailing-comma (conflicts with formatter)
    "INP001", # implicit-namespace-package (single-file scripts)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "T20",    # flake8-print - allow print in scripts
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 4
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 10
