[project]
name = "workspace"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
required-version = ">=0.9.21"
exclude-newer = "1 day"

[tool.uv.workspace]
members = ["packages/node/tests/mitmproxy"]

[dependency-groups]
dev = [
    "mitmproxy==12.2.3 ; sys_platform != 'win32'",
    "pyrefly==1.0.0",
    "ruff==0.15.13",
    # Pinned below 1.152: newer semgrep manylinux wheels target glibc 2.35,
    # which is newer than our manylinux_2_28 (glibc 2.28) dev-container base.
    "semgrep==1.151.0 ; sys_platform != 'win32'",
    "zizmor==1.24.1 ; sys_platform != 'win32'",
]

[tool.pyrefly]
project-includes = ["packages/**/*.py"]
use-ignore-files = true

[tool.ruff]
cache-dir = ".cache/shared/ruff"
line-length = 100
extend-exclude = ["external"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle - documentation style (too noisy for scripts)
    "COM812", # missing-trailing-comma (conflicts with formatter)
    "INP001", # implicit-namespace-package (single-file scripts)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "T20",    # flake8-print - allow print in scripts
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 4
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 10
